[gd_scene load_steps=5 format=3 uid="uid://jfpv4n6iy7jd"]

[ext_resource type="Script" uid="uid://dxq0rojfuhfy2" path="res://scripts/queue.gd" id="1_bl6ki"]
[ext_resource type="Texture2D" uid="uid://c48us02gkppw6" path="res://graphics/misc/logo_sci_atlas.png" id="2_5m01m"]
[ext_resource type="FontFile" uid="uid://dufv5fk7ox4x8" path="res://fonts/lanapixel_everything/LanaPixel.ttf" id="3_5m01m"]

[sub_resource type="Theme" id="Theme_mv8xl"]
default_font = ExtResource("3_5m01m")
default_font_size = 44

[node name="Queue" type="Node2D"]
script = ExtResource("1_bl6ki")

[node name="LogoLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="LogoLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="LogoLayer/Control"]
scale = Vector2(8, 8)
texture = ExtResource("2_5m01m")
hframes = 10
vframes = 10

[node name="TextLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="TextLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="LabelMessage" type="Label" parent="TextLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_mv8xl")
text = "Searching for players, please wait"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelCount" type="Label" parent="TextLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_mv8xl")
text = "Players found: 1/8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
